--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.discord4j:discord4j-core:3.1.0"
+    implementation "org.litote.kmongo:kmongo:4.1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
