--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.discord4j:discord4j-core:3.1.0"
     implementation "org.litote.kmongo:kmongo:4.1.0"
+//    implementation "com.massisframework:j-text-utils:0.3.4"
+    implementation "org.nocrala.tools.texttablefmt:text-table-formatter:1.2.4"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
